delete old page and copy raw file to homepage

--- a/test/client/Split_raw.html
+++ b/test/client/Split_raw.html
@@ -291,14 +291,14 @@
                   <div class="alloc_text">付款人</div>
                   <div class="alloc_img"><img class="small_icon" src="./midterm_photo/ppl-07.png" alt="大頭照"><span id="username">丁丁</span></div>
                   <div class="alloc_type">全部</div>
-                  <div class="alloc_next"><img src="./final_icon/vector.png" alt="詳細資料"></div>
+                  <div class="alloc_next"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
                 </div>
                 <hr class="break_style2">
                 <div id="splitter" onclick="">
                   <div class="alloc_text">分攤人</div>
                   <div class="alloc_img"><img class="small_icon" src="./midterm_photo/ppl-07.png" alt="大頭照"><span id="username">丁丁</span></div>
                   <div class="alloc_type">平分</div>
-                  <div class="alloc_next"><img src="./final_icon/vector.png" alt="詳細資料"></div>
+                  <div class="alloc_next"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
                 </div>
                 <hr class="break_style2"><span class="remaining">零頭 $0.00</span>
               </div>
