新增獲取卡牌
加獲取卡牌頁面
部分頁面導向修正
首頁下方記帳動畫取消旋轉
記帳簿上方有menu

--- a/test/client/Split_raw2.html
+++ b/test/client/Split_raw2.html
@@ -35,6 +35,7 @@
         <li><a href="#__Page62__fullscreen">款項結算</a></li>
         <li><a href="#__Page61__fullscreen">幸運轉盤</a></li>
         <li><a href="#__Page44__fullscreen">記帳本</a></li>
+		<li><a href="#__Page47__fullscreen">獲取卡牌</a></li>
       </ul>
       <div class="tab-inner" id="__Register__fullscreen">
         <div id="__Register__form-normal__container">
@@ -109,7 +110,7 @@
         </div>
       </div>
       <div class="tab-inner" id="__Page7__fullscreen">
-        <div id="__Page7__moneyimg__container"><img class="__Page7__moneyimg" src="./midterm_icon/split_mainlogo.png" alt="錢包圖片" onclick="change_page(12);Page37__checkadds();"></div>
+        <div id="__Page7__moneyimg__container"><img class="__Page7__moneyimg" src="./midterm_icon/split_mainlogo.png" alt="錢包圖片"></div>
         <div id="__Page7__inform__container">
           <div id="__Page7__inform__bar">
             <!-- img class="__Page7__inform__noteimg" src="./midterm_icon/notification.png" alt="通知欄"-->
@@ -262,7 +263,7 @@
       </div>
       <div class="tab-inner" id="__Mainpage__manualTrack__container">
         <div id="manualTrack__header__bar"><img class="cancel-icon" src="./midterm_icon/cancel.png" alt="cancel" onclick="change_page(0)"><span class="current_date"></span>
-          <div id="manual-submit" onclick="">OK</div>
+          <div id="manual-submit" onclick="change_page(16)">OK</div>
         </div>
         <div id="manualTrack__form__bar">
           <form id="spending-tracker">
@@ -291,14 +292,14 @@
                   <div class="alloc_text">付款人</div>
                   <div class="alloc_img"><img class="small_icon" src="./midterm_photo/ppl-07.png" alt="大頭照"><span id="username">丁丁</span></div>
                   <div class="alloc_type">全部</div>
-                  <div class="alloc_next"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
+                  <div class="alloc_next" id="__Mainpage__alloc_next__manualTrack1" onclick="change_page(12);Page37__checkadds();"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
                 </div>
                 <hr class="break_style2">
                 <div id="splitter" onclick="">
                   <div class="alloc_text">分攤人</div>
                   <div class="alloc_img"><img class="small_icon" src="./midterm_photo/ppl-07.png" alt="大頭照"><span id="username">丁丁</span></div>
                   <div class="alloc_type">平分</div>
-                  <div class="alloc_next"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
+                  <div class="alloc_next" id="__Mainpage__alloc_next__manualTrack2" onclick="change_page(11);firstadds();"><img src="./final_icon/Vector.png" alt="詳細資料"></div>
                 </div>
                 <hr class="break_style2"><span class="remaining">零頭 $0.00</span>
               </div>
@@ -582,10 +583,10 @@
       </div>
       <div class="tab-inner" id="__Page38__fullscreen">
         <div id="__Page38__fullscreen__container">
-          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(12);Page37__checkadds();">
+          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(6)">
             <!-- p class="__Page38__paytypetop1">X</p-->
             <p class="__Page38__paytypetop2">分攤方式</p>
-            <p class="__Page38__paytypetop3" onclick="change_page(0)">OK</p>
+            <p class="__Page38__paytypetop3" onclick="change_page(6)">OK</p>
           </div>
           <div id="__Page38__paytype__container">
             <div id="__Page38__addtype__bar" onclick="choose_type(this.id)"><img class="__Page38__typeimg" id="__Page38__typeimg" src="./midterm_icon/black_equal.png"></div>
@@ -614,10 +615,10 @@
       </div>
       <div class="tab-inner" id="__Page37__fullscreen">
         <div id="__Page38__fullscreen__container">
-          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" id="__Page37__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(0)">
+          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" id="__Page37__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(6)">
             <!-- p class="__Page38__paytypetop1">X</p-->
             <p class="__Page38__paytypetop2">付款人</p>
-            <p class="__Page38__paytypetop3" id="__Page37__paytypetop3" onclick="change_page(11);firstadds();">OK</p>
+            <p class="__Page38__paytypetop3" id="__Page37__paytypetop3" onclick="change_page(6)">OK</p>
           </div>
           <div id="__Page37__people__container">
             <!-- 此label只是範例，真正加入的地方在js的Page37__checkadds()-->
@@ -635,7 +636,7 @@
             <div id="__Page38__decorate2__container"></div>
           </div>
           <label class="__Page37__peoplepay" id="delete_id">
-            <div id="__Page38__informphoto"><img class="__Page38__informphotoimg" src="./midterm_photo/ppl-07.png" alt="大頭照"></div>
+            <div id="__Page38__informphoto"><img class="__Page38__informphotoimg" src="./midterm_icon/Group 30.png" alt="大頭照"></div>
             <div id="__Page38__peoplename__bar">
               <p class="__Page38__peoplename">多人付款</p>
             </div>
@@ -664,7 +665,7 @@
               </div>
             </div>
           </div>
-          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(11)">
+          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(15)">
             <!-- p class="__Page38__paytypetop1">X</p-->
             <p class="__Page38__paytypetop2">款項結算</p>
             <p class="__Page38__paytypetop3" id="__Page62__next" onclick="page62__notification(1)">Next</p>
@@ -710,7 +711,7 @@
               </div>
             </div>
           </div>
-          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(11)">
+          <div id="__Page38__paytypetop__container"><img class="__Page38__paytypetop1" src="./midterm_icon/cancel.png" onclick="change_page(15)">
             <!-- p class="__Page38__paytypetop1">X</p-->
             <p class="__Page38__paytypetop2">款項結算</p>
             <p class="__Page38__paytypetop3">Next</p>
@@ -846,6 +847,61 @@
           <div class="__Page44__word__bar" id="__Page44__word__containerid" onclick="change_page(13);Page62__adds(1);">
             <p class="__Page44__bill_word">結算</p>
           </div>
+        </div>
+      </div>
+	  <div class="tab-inner" id="__Page47__fullscreen" style="display: block;">
+		<div id="__Page47__informnotification__container" class="__Page47__informnotification__container">
+            <div id="__Page47__inform">
+			  <p id="__Page47__informtext1" class="__Page62__informtext">恭喜你完成記帳並解鎖了新卡牌，</p>
+			  <p id="__Page47__informtext2" class="__Page62__informtext">快點到卡牌冊裡面查看吧!</p>
+			  <div id="__Page62__informbutton">
+			    <div id="__Page62__setting">
+				  <p class="__Page47__handsetting" id="__Page47__handsetting" onclick="change_page(8);page47__restore();">讓我看看</p>
+				  <p class="__Page47__handsetting" id="__Page47__luckysetting" onclick="change_page(0);page47__restore();">我知道了</p>
+				</div>
+			  </div>
+            </div>
+          </div>
+        <div id="__Page47__header__container"><img id="__Page47__cancel" class="cancel-icon" src="./midterm_icon/cancel.png" alt="cancel" onclick="change_page(0)">
+		  <span id="__Page47__fullscreen">記帳成功</span>
+          <div id="__Page47__ok" onclick="">OK</div>
+        </div>
+        <div id="__Page47__form__container">
+          <form id="__Page47__spending-tracker">
+            <div id="__Page47__inform__bar">
+              <input id="__Page47__item_name" type="text" name="account_name" placeholder="家樂福">
+              <!--label for="account_name"><img src="./midterm_icon/edit.png" alt="cancel" onclick=""></label-->
+              <input id="__Page47__item_cost" type="text" name="account_cost" inputmode="decimal" placeholder="$ 2033">
+              <hr class="break_style1">
+            </div>
+            <div id="other_infos">
+			  <div id="__Page47__cardfront__container" class="__Page47__cardfront__container">
+				<div id="__Page47__cardfront__bar" class="__Page47__cardfront__bar" >
+				  <div id="__Page47__cardfrontName" class="__Page47__cardName">
+					<p id="__Page47__cardfrontNameText" class="__Page47__cardNameText">討債卡</p>
+				  </div>
+				  <div id="__Page2__cardStar"></div>
+				  <div id="__Page47__imgUpload" class="__Page47__imgUpload">
+				    <div id="__Page47__frontcameraImg" class="__Page47__cameraImg"></div>
+				    <p id="__Page47__uploadText" class="__Page47__uploadText">上傳圖片</p>
+				  </div>
+				  <div id="__Page47__spec" class="__Page47__spec">
+					<p id="__Page47__specText">功能說明</p>
+					<textarea id="__Page47__specInput" readonly="" disabled="disabled" type="text">發給那個欠錢不還的冤親債主。</textarea>
+				  </div>
+				  <div id="__Page47__message">
+					<p id="__Page47__messageText">想對他說的話(點按編輯, 限20字)</p>
+				  <textarea id="__Page47__messageInput" type="text" cols="20" rows="2"></textarea>
+				  </div>
+				</div>
+				<div id="__Page47__cardback__bar" class="__Page47__cardback__bar">
+				  <div id="__Page47__iconimg__container" onclick="page47__rotatecard()">
+				    <img class="__Page7__moneyimg" src="./midterm_icon/split_mainlogo.png" alt="錢包圖片">
+				  </div>
+			    </div>
+			  </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
